<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="240sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240sp"
            android:background="@android:color/background_light"
            android:scaleType="fitXY"
            android:src="@drawable/bg_suricata" />

        <TextView
            android:id="@+id/tvIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bExit"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/exit" />

            <Button
                android:id="@+id/bLogin"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/login" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>